--- a/MoviesApi/Properties/launchSettings.json
+++ b/MoviesApi/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7102;http://localhost:5249",
       "environmentVariables": {
@@ -18,7 +18,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "http://localhost:5249",
       "environmentVariables": {
