--- a/MoviesApi/MoviesApi.csproj
+++ b/MoviesApi/MoviesApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
     <PackageReference Include="Neo4j.Driver" Version="5.13.0" />
   </ItemGroup>
 
