Added logging with Serilog

--- a/MoviesApi/MoviesApi.csproj
+++ b/MoviesApi/MoviesApi.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
     <PackageReference Include="MQTTnet" Version="4.3.3.952" />
     <PackageReference Include="Neo4j.Driver" Version="5.13.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
