Created Services project

--- a/MoviesService.Api/MoviesService.Api.csproj
+++ b/MoviesService.Api/MoviesService.Api.csproj
@@ -9,9 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CloudinaryDotNet" Version="1.24.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
-    <PackageReference Include="MQTTnet" Version="4.3.3.952" />
     <PackageReference Include="Neo4j.Driver" Version="5.17.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
@@ -20,6 +18,7 @@
     <ProjectReference Include="..\MoviesService.Models\MoviesService.Models.csproj" />
     <ProjectReference Include="..\MoviesService.Core\MoviesService.Core.csproj" />
     <ProjectReference Include="..\MoviesService.DataAccess\MoviesService.DataAccess.csproj" />
+    <ProjectReference Include="..\MoviesService.Services\MoviesService.Services.csproj" />
   </ItemGroup>
 
 </Project>
